added kotlin dsl + basic service runner settings